--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
-//    compile 'com.android.support:appcompat-v7:22.2.1'
+    //    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    //    compile 'com.android.support:appcompat-v7:22.2.1'
     compile project(':lib')
+    compile project(':bms_core')
 }
