--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.ibm.mca.cma.ibm.com.fbauth"
+        applicationId "com.ibm.mobileclientaccess.fbauth"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
