--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,20 @@ android {
 
 repositories {
     mavenCentral()
+//    maven {
+//        url 'http://visustar.francelab.fr.ibm.com:8081/nexus/content/repositories/mobile-all' //Internal Nexus
+//    }
+    flatDir{
+        dirs 'libs'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile (name:'bms-clientsdk-android-core-0.1-SNAPSHOT', ext:'aar')
     //    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     //    compile 'com.android.support:appcompat-v7:22.2.1'
     compile project(':lib')
-    compile project(':bms_core')
+//    compile project(':bms_core')
+//    compile 'com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT'
 }
