--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app', ':lib'
-include ':bms_core'
-project(':bms_core').projectDir = new File('../bms-clientsdk-android-core/lib/')
+//include ':bms_core'
+//project(':bms_core').projectDir = new File('../bms-clientsdk-android-core/lib/')
