--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'http://visustar.francelab.fr.ibm.com:8081/nexus/content/repositories/mobile-all'
+            //Internal Nexus
+        }
     }
 }
