--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -30,9 +30,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile (name:'bms-clientsdk-android-core-0.1-SNAPSHOT', ext:'aar')
-    //    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile (name:'bms-clientsdk-android-core-0.1', ext:'aar')
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
+//    compile "com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar"
 //    compile 'com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT'
-//    compile project(':bms_core')
+
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
