--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile (name:'bms-clientsdk-android-core-0.1', ext:'aar')
     compile project(':lib')
-//    compile 'com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar'
+    compile ('com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar') {
+        transitive = true
+    }
 }
