--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -20,20 +20,17 @@ android {
 
 repositories {
     mavenCentral()
-//    maven {
-//        url 'http://visustar.francelab.fr.ibm.com:8081/nexus/content/repositories/mobile-all' //Internal Nexus
-//    }
-    flatDir{
-        dirs 'libs'
-    }
+
+        flatDir{
+            dirs 'libs'
+        }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile (name:'bms-clientsdk-android-core-0.1', ext:'aar')
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
-//    compile "com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar"
-//    compile 'com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT'
-
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
+//    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile ('com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar') {
+        transitive = true
+    }
 }
