--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,6 @@ android {
 
 repositories {
     mavenCentral()
-//    maven {
-//        url 'http://visustar.francelab.fr.ibm.com:8081/nexus/content/repositories/mobile-all' //Internal Nexus
-//    }
     flatDir{
         dirs 'libs'
     }
@@ -32,7 +29,9 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':lib')
-    compile ('com.ibm.mobilefirstplatform.bms.clientsdk.android:bms-clientsdk-android-core:0.1-SNAPSHOT@aar') {
-        transitive = true
-    }
+    compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
+            name: 'core',
+            version: '1.0.0-SNAPSHOT',
+            ext: 'aar',
+            transitive: true
 }
