--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile project(':lib')
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '1.0.0-SNAPSHOT',
+            version: '1.0.0',
             ext: 'aar',
             transitive: true
 }
