--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '1.0.0-SNAPSHOT',
+            version: '1.0.0',
             ext: 'aar',
             transitive: true
 }
