--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ibm.mobileclientaccess.fbauth"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -29,9 +29,5 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':lib')
-    compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
-            name: 'core',
-            version: '1.0.0-SNAPSHOT',
-            ext: 'aar',
-            transitive: true
+    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
 }
