now with fixed logging

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,13 +19,6 @@ android {
     }
 }
 
-repositories {
-    mavenCentral()
-    flatDir{
-        dirs 'libs'
-    }
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
@@ -80,6 +73,14 @@ def getSnapshotRepositoryUrl() {
     return 'https://oss.sonatype.org/content/repositories/snapshots/'
 }
 
+def isReleaseBuild() {
+    return !getVersion().contains('-SNAPSHOT')
+}
+
+def getVersion() {
+    return '2.0.0-SNAPSHOT'
+}
+
 uploadArchives {
     repositories {
         mavenDeployer {
@@ -95,7 +96,7 @@ uploadArchives {
 
             pom.groupId='com.ibm.mobilefirstplatform.clientsdk.android'
             pom.artifactId='facebookauthentication'
-            pom.version = '2.0.0-SNAPSHOT'
+            pom.version = getVersion()
 
             pom.project {
                 name 'IBM Bluemix Mobile Services - Client SDK Android Facebook Authentication'
