--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile project(':lib')
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '1.+',
+            version: '1.1.0',
             ext: 'aar',
             transitive: true
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
