--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '1.+',
+            version: '1.1.0',
             ext: 'aar',
             transitive: true
 }
