Add support for sonar

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -44,6 +44,8 @@ task generateJavadoc(type: Javadoc) {
     options.memberLevel = JavadocMemberLevel.PUBLIC
 
     setTitle 'Bluemix Mobile Services Facebook OAuth Android API'
+
+    failOnError false
 }
 
 task androidJavadocsJar(type: Jar, dependsOn: generateJavadoc) {
