--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '2.0.1',
+            version: '2.1.0',
             ext: 'aar',
             transitive: true
 }
@@ -87,7 +87,7 @@ def isReleaseBuild() {
 }
 
 def getVersion() {
-    return '2.2.0'
+    return '2.2.1-SNAPSHOT'
 }
 
 uploadArchives {
