--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 3
-        versionName "2.2.0"
+        versionName "2.2.2-SNAPSHOT"
     }
     buildTypes {
         release {
@@ -87,7 +87,7 @@ def isReleaseBuild() {
 }
 
 def getVersion() {
-    return '2.2.1-SNAPSHOT'
+    return '2.2.2-SNAPSHOT'
 }
 
 uploadArchives {
