--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 3
-        versionName "2.2.2-SNAPSHOT"
+        versionName "2.2.2"
     }
     buildTypes {
         release {
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '2.1.0',
+            version: '2.1.1',
             ext: 'aar',
             transitive: true
 }
@@ -87,7 +87,7 @@ def isReleaseBuild() {
 }
 
 def getVersion() {
-    return '2.2.2-SNAPSHOT'
+    return '2.2.2'
 }
 
 uploadArchives {
