--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ibm.mobileclientaccess.fbauth"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "2.0"
+        versionCode 3
+        versionName "2.2.0"
     }
     buildTypes {
         release {
@@ -31,7 +31,7 @@ dependencies {
     compile project(':lib')
     compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
             name: 'core',
-            version: '1.+',
+            version: '2.0.1',
             ext: 'aar',
             transitive: true
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
