--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -23,11 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
-    compile group: 'com.ibm.mobilefirstplatform.clientsdk.android',
-            name: 'core',
-            version: '2.+',
-            ext: 'aar',
-            transitive: true
+    compile 'com.ibm.mobilefirstplatform.clientsdk.android:core:[2.0.0,3.0.0)'
 }
 
 task generateJavadoc(type: Javadoc) {
